--- a/Coursera/Deeplearning.ai/Neural Networks and Deep Learning/Week 2/1. Python and Vectorization.ipynb
+++ b/Coursera/Deeplearning.ai/Neural Networks and Deep Learning/Week 2/1. Python and Vectorization.ipynb
@@ -262,32 +262,27 @@
     "\n",
     "Calculating for $m$ examples and $n = 2$ features <font color='red'>without</font> vectorization\n",
     "\n",
-    "$\n",
-    "J = 0;\\ \\ dw_1 = 0;\\ \\ dw_2 = 0;\\ \\ db = 0 \\\\\n",
-    "\\\\\n",
-    "\\text{For}\\ \\ i=1\\ \\ \\text{to}\\ \\ m \\\\\n",
-    "\\hspace{15pt}z^{(i)} = w^Tx^{(i)} + b \\\\ \n",
-    "\\hspace{15pt}a^{(i)} = \\sigma(z^{(i)}) \\\\\n",
-    "\\hspace{15pt}J\\ += - [y^{(i)}\\ log(a^{(i)}) + (1 - y^{(i)})\\ log(1 - a^{(i)})] \\\\\n",
-    "\\hspace{15pt}dz^{(i)} = a^{(i)} - y^{(i)} \\\\\n",
-    "\\hspace{15pt}\\text{For}\\ \\ j=1 \\ \\text{to} \\ \\ n \\\\\n",
-    "\\hspace{30pt}dw_j += x_j^{(i)}dz^{(i)} \\\\\n",
-    "\\hspace{15pt}\\text{End for} \\\\\n",
-    "\\hspace{15pt}db += dz^{(i)} \\\\\n",
-    "\\hspace{15pt}J\\ /=\\ m \\\\\n",
-    "\\hspace{15pt}dw_1\\ /=\\ m \\\\\n",
-    "\\hspace{15pt}dw_2\\ /=\\ m \\\\\n",
-    "\\hspace{15pt}db\\ /=\\ m \\\\\n",
-    "\\text{End for}\n",
-    "$\n",
+    "$J = 0;\\ \\ dw_1 = 0;\\ \\ dw_2 = 0;\\ \\ db = 0$<br>\n",
+    "$\\text{For}\\ \\ i=1\\ \\ \\text{to}\\ \\ m $<br>\n",
+    "$\\hspace{15pt}z^{(i)} = w^Tx^{(i)} + b$<br>\n",
+    "$\\hspace{15pt}a^{(i)} = \\sigma(z^{(i)})$<br>\n",
+    "$\\hspace{15pt}J\\ += - [y^{(i)}\\ log(a^{(i)}) + (1 - y^{(i)})\\ log(1 - a^{(i)})]$<br>\n",
+    "$\\hspace{15pt}dz^{(i)} = a^{(i)} - y^{(i)}$<br>\n",
+    "$\\hspace{15pt}\\text{For}\\ \\ j=1 \\ \\text{to} \\ \\ n$<br>\n",
+    "$\\hspace{30pt}dw_j += x_j^{(i)}dz^{(i)}$<br>\n",
+    "$\\hspace{15pt}\\text{End for}$<br>\n",
+    "$\\hspace{15pt}db += dz^{(i)}$<br>\n",
+    "$\\hspace{15pt}J\\ /=\\ m$<br>\n",
+    "$\\hspace{15pt}dw_1\\ /=\\ m$<br>\n",
+    "$\\hspace{15pt}dw_2\\ /=\\ m$<br>\n",
+    "$\\hspace{15pt}db\\ /=\\ m$<br>\n",
+    "$\\text{End for}$<br>\n",
     "\n",
     "### Updating weights\n",
     "\n",
-    "$\n",
-    "w_1\\ := w_1 - \\alpha dw_1 \\\\\n",
-    "w_2\\ := w_2 - \\alpha dw_2 \\\\\n",
-    "b\\ := b - \\alpha db \\\\\n",
-    "$\n",
+    "$w_1\\ := w_1 - \\alpha dw_1$<br>\n",
+    "$w_2\\ := w_2 - \\alpha dw_2$<br>\n",
+    "$b\\ := b - \\alpha db$<br>\n",
     "\n",
     "The code in Python implementing this function is presented below:"
    ]
@@ -395,9 +390,8 @@
     "\n",
     "To compute $Z^{(1)}$, $Z^{(2)}$, $Z^{(3)}$ and so on, all in one step, we construct a ($1\\times M$) matrix (row vector) to compute them all at the same time. \n",
     "\n",
-    "$\n",
-    "Z = [ z^{(1)}\\ \\ z^{(2)}\\ \\ \\dots \\ \\ z^{(m)}] \\\\ \n",
-    "Z = w^TX + \n",
+    "$Z = [ z^{(1)}\\ \\ z^{(2)}\\ \\ \\dots \\ \\ z^{(m)}]$<br>\n",
+    "$Z = w^TX + \n",
     "\\begin{bmatrix}\n",
     "b_1 & b_2 & \\ldots & b_m\n",
     "\\end{bmatrix} \\hspace{15pt}\\rightarrow\\hspace{15pt} \\text{where}\\ \\ \\ b \\rightarrow (1,m) \\ \\ \\ \\text{i.e.,} \\ \\ \\  b \\in \\mathbb{R}^{1,m} \\ \\ \\ \\text{dimension} \\\\\n",
