--- a/Coursera/Deeplearning.ai/Neural Networks and Deep Learning/Week 2/1. Python and Vectorization.ipynb
+++ b/Coursera/Deeplearning.ai/Neural Networks and Deep Learning/Week 2/1. Python and Vectorization.ipynb
@@ -394,29 +394,24 @@
     "$Z = w^TX + \n",
     "\\begin{bmatrix}\n",
     "b_1 & b_2 & \\ldots & b_m\n",
-    "\\end{bmatrix} \\hspace{15pt}\\rightarrow\\hspace{15pt} \\text{where}\\ \\ \\ b \\rightarrow (1,m) \\ \\ \\ \\text{i.e.,} \\ \\ \\  b \\in \\mathbb{R}^{1,m} \\ \\ \\ \\text{dimension} \\\\\n",
-    "Z = np.dot(w^T, X) + b \\\\\n",
-    "A = [ a^{(1)}\\ \\ a^{(2)}\\ \\ \\dots\\ \\ a^{(m)}] = \\sigma(Z)\n",
-    "$\n",
+    "\\end{bmatrix} \\hspace{15pt}\\rightarrow\\hspace{15pt} \\text{where}\\ \\ \\ b \\rightarrow (1,m) \\ \\ \\ \\text{i.e.,} \\ \\ \\  b \\in \\mathbb{R}^{1,m} \\ \\ \\ \\text{dimension}$<br>\n",
+    "$Z = np.dot(w^T, X) + b$<br>\n",
+    "$A = [ a^{(1)}\\ \\ a^{(2)}\\ \\ \\dots\\ \\ a^{(m)}] = \\sigma(Z)$<br>\n",
     "\n",
     "Thus, we compute:\n",
     "\n",
     "$\n",
     "Z = \\begin{bmatrix}\n",
     "w_1 & w_2 & \\ldots & w_n\n",
-    "\\end{bmatrix}\n",
-    "\\begin{bmatrix}\n",
+    "\\end{bmatrix} \\begin{bmatrix}\n",
     "| & | &  & |\\\\\n",
     "x^{(1)} & x^{(2)} & \\dots & x^{(m)} \\\\\n",
     "| & | &  & |\\\\\n",
-    "\\end{bmatrix} + \n",
-    "\\begin{bmatrix}\n",
+    "\\end{bmatrix} + \\begin{bmatrix}\n",
     "b_1 & b_2 & \\ldots & b_m\n",
-    "\\end{bmatrix} \\\\\n",
-    "Z = \\begin{matrix}\n",
-    "[w^Tx^{(1)}+b_1 & w^Tx^{(2)}+b_2 & ...  & w^Tx^{(m)}+b_m] & \\hspace{15pt}\\rightarrow\\hspace{15pt} (1, m)\\hspace{15pt} \\mathbb{R}^{1,m}\n",
-    "\\end{matrix}\n",
-    "$\n",
+    "\\end{bmatrix}$<br>\n",
+    "$Z = \\begin{matrix}\n",
+    "[w^Tx^{(1)}+b_1 & w^Tx^{(2)}+b_2 & ...  & w^Tx^{(m)}+b_m] & \\hspace{15pt}\\rightarrow\\hspace{15pt} (1, m)\\hspace{15pt} \\mathbb{R}^{1,m} \\end{matrix}$\n",
     "\n",
     "In Python, we can perform this calculation using a single command as:\n",
     "\n",
