--- a/Coursera/Deeplearning.ai/Neural Networks and Deep Learning/Week 2/1. Python and Vectorization.ipynb
+++ b/Coursera/Deeplearning.ai/Neural Networks and Deep Learning/Week 2/1. Python and Vectorization.ipynb
@@ -457,8 +457,8 @@
     "$$\n",
     "A = \\begin{bmatrix}\n",
     "a^{(1)} & a^{(2)} & \\ldots & a^{(m)} \\\\ \n",
-    "\\end{bmatrix} \\\\\n",
-    "Y = \\begin{bmatrix}\n",
+    "\\end{bmatrix}$$<br>\n",
+    "$$Y = \\begin{bmatrix}\n",
     "y^{(1)} & y^{(2)} & \\ldots & y^{(m)} \\\\ \n",
     "\\end{bmatrix}\n",
     "$$\n",
