--- a/Coursera/Deeplearning.ai/Neural Networks and Deep Learning/Week 2/1. Python and Vectorization.ipynb
+++ b/Coursera/Deeplearning.ai/Neural Networks and Deep Learning/Week 2/1. Python and Vectorization.ipynb
@@ -457,7 +457,7 @@
     "$$\n",
     "A = \\begin{bmatrix}\n",
     "a^{(1)} & a^{(2)} & \\ldots & a^{(m)} \\\\ \n",
-    "\\end{bmatrix}$$<br>\n",
+    "\\end{bmatrix}$$\n",
     "$$Y = \\begin{bmatrix}\n",
     "y^{(1)} & y^{(2)} & \\ldots & y^{(m)} \\\\ \n",
     "\\end{bmatrix}\n",
@@ -466,7 +466,8 @@
     "Based on these definitions, we can compute `dZ` as `A` minus `Y` because it's going to be equal to: \n",
     "\n",
     "$$\n",
-    "dZ = A - Y \\\\\n",
+    "dZ = A - Y $$\n",
+    "$$\n",
     "dZ = \\begin{bmatrix}\n",
     "a^{(1)} - y^{(1)} & a^{(2)} - y^{(2)} & \\ldots & a^{(m)} - y^{(m)} \\\\ \n",
     "\\end{bmatrix}\n",
@@ -486,14 +487,12 @@
     "\n",
     "Finally, for computing `dw` in non-vectorized version, we have:\n",
     "\n",
-    "$\n",
-    "dw = 0 \\\\\n",
-    "dw\\ += x^{(1)} dz^{(1)} \\\\\n",
-    "dw\\ += x^{(2)} dz^{(2)} \\\\\n",
-    "\\ldots \\\\\n",
-    "dw\\ += x^{(m)} dz^{(m)} \\\\\n",
-    "dw\\ /= m\n",
-    "$\n",
+    "$dw = 0$<br>\n",
+    "$dw\\ += x^{(1)} dz^{(1)}$<br>\n",
+    "$dw\\ += x^{(2)} dz^{(2)}$<br>\n",
+    "$\\ldots$<br>\n",
+    "$dw\\ += x^{(m)} dz^{(m)}$<br>\n",
+    "$dw\\ /= m$\n",
     "\n",
     "On the other hand, with a vectorized implementation, we have:\n",
     "\n",
@@ -532,10 +531,8 @@
     "\n",
     "And for update weights, we compute:\n",
     "\n",
-    "$$\n",
-    "w = w - \\alpha dw \\\\\n",
-    "b = b - \\alpha db \\\\\n",
-    "$$\n",
+    "$$w = w - \\alpha dw$$\n",
+    "$$b = b - \\alpha db$$\n",
     "\n",
     "Below, there is an example of the Python implementation of this vectorized version:"
    ]
