--- a/Coursera/Deeplearning.ai/Neural Networks and Deep Learning/Week 2/1. Python and Vectorization.ipynb
+++ b/Coursera/Deeplearning.ai/Neural Networks and Deep Learning/Week 2/1. Python and Vectorization.ipynb
@@ -519,15 +519,11 @@
     "\n",
     "which generates a ($1, m$) matrix. Finally, our algorithm to compute the derivatives becomes:\n",
     "\n",
-    "$$\n",
-    "\\begin{matrix}\n",
-    "Z = w^{T}X + b & \\text{# np.dot(w.T, X) + b} \\\\\n",
-    "A = \\sigma(Z)  & \\\\\n",
-    "dZ = A - Y & \\\\\n",
-    "dw = \\frac{1}{m} X dZ^{T} & \\\\\n",
-    "db = \\frac{1}{m} \\text{np.sum(dZ)} & \\\\\n",
-    "\\end{matrix}\n",
-    "$$\n",
+    "$Z = w^{T}X + b \\hspace{15pt}\\text{# np.dot(w.T, X) + b}$<br>\n",
+    "$A = \\sigma(Z)$<br>\n",
+    "$dZ = A - Y$<br>\n",
+    "$dw = \\frac{1}{m} X dZ^{T}$<br>\n",
+    "$db = \\frac{1}{m} \\text{np.sum(dZ)}$\n",
     "\n",
     "And for update weights, we compute:\n",
     "\n",
