--- a/Coursera/Deeplearning.ai/Neural Networks and Deep Learning/Week 2/1. Python and Vectorization.ipynb
+++ b/Coursera/Deeplearning.ai/Neural Networks and Deep Learning/Week 2/1. Python and Vectorization.ipynb
@@ -840,11 +840,10 @@
     "\n",
     "Taking into account all the examples ($m$) in the training set, we have the cost:\n",
     "\n",
-    "$\n",
-    "\\log p(\\text{labels in training set}) = \\log \\prod_{i=1}^{m} p(y^{(i}|x^{(i)}) \\\\\n",
-    "\\log p(\\text{labels in training set}) = \\sum_{i=1}^{m} \\log p(y^{(i}|x^{(i)}) \\\\\n",
-    "\\log p(\\text{labels in training set}) = - \\sum_{i=1}^{m} \\mathcal{L}(\\hat{y}^{(i)}, y^{(i)})\n",
-    "$ \n",
+    "$\\log p(\\text{labels in training set}) = \\log \\prod_{i=1}^{m} p(y^{(i}|x^{(i)})$<br>\n",
+    "$\\log p(\\text{labels in training set}) = \\sum_{i=1}^{m} \\log p(y^{(i}|x^{(i)})$<br>\n",
+    "$\\log p(\\text{labels in training set}) = - \\sum_{i=1}^{m} \\mathcal{L}(\\hat{y}^{(i)}, y^{(i)})$\n",
+    " \n",
     "\n",
     "As we want to minimize the cost, *i.e.*, maximize the log likelihood, we have:\n",
     "\n",
