--- a/Coursera/Deeplearning.ai/Neural Networks and Deep Learning/Week 2/1. Python and Vectorization.ipynb
+++ b/Coursera/Deeplearning.ai/Neural Networks and Deep Learning/Week 2/1. Python and Vectorization.ipynb
@@ -810,7 +810,7 @@
    "source": [
     "# Cost function for logistic regression\n",
     "\n",
-    "In logistic regression, we have that the prediction $\\hat{y} is\n",
+    "In logistic regression, we have that the prediction $\\hat{y}$ is\n",
     "\n",
     "$$\n",
     "\\hat{y} = \\sigma(w^TX + b)\\ \\ \\ \\ \\text{where}\\ \\ \\ \\ \\sigma(Z) = \\frac{1}{1+e^{-Z}}\n",
