--- a/Coursera/Deeplearning.ai/Neural Networks and Deep Learning/Week 2/1. Python and Vectorization.ipynb
+++ b/Coursera/Deeplearning.ai/Neural Networks and Deep Learning/Week 2/1. Python and Vectorization.ipynb
@@ -820,7 +820,7 @@
     "\n",
     "$\n",
     "\\begin{matrix}\n",
-    "\\text{if}\\ \\ \\ y=1 & p(y|x) = \\hat{y} \\\\\n",
+    "\\text{if}\\ \\ \\ y=1 & p(y|x) = \\hat{y}\\ \\ \\ \\ \\ \\ \\\\\n",
     "\\text{if}\\ \\ \\ y=0 & p(y|x) = 1-\\hat{y} \\\\\n",
     "\\end{matrix}\n",
     "$\n",
