--- a/Coursera/Deeplearning.ai/Neural Networks and Deep Learning/Week 2/Logistic Regression and Derivatives.ipynb
+++ b/Coursera/Deeplearning.ai/Neural Networks and Deep Learning/Week 2/Logistic Regression and Derivatives.ipynb
@@ -8,11 +8,9 @@
     "\n",
     "Logistic Regression forward from input $x$ and true label $y$, where $w$ stands for the weight matrix, $b$ bias, $\\sigma$ is the activation function (sigmoid) and $\\mathcal{L}$ is the loss. \n",
     "\n",
-    "$\n",
-    "  z = w^Tx + b \\\\\n",
-    "  \\hat{y} = a = \\sigma(z) \\\\\n",
-    "  \\mathcal{L}(a, y) = -[y\\ log(a) + (1 - y)\\ log(1 - a)]\n",
-    "$"
+    "$z = w^Tx + b$<br>\n",
+    "$\\hat{y} = a = \\sigma(z)$<br>\n",
+    "$\\mathcal{L}(a, y) = -[y\\ log(a) + (1 - y)\\ log(1 - a)]$"
    ]
   },
   {
