--- a/Coursera/Deeplearning.ai/Neural Networks and Deep Learning/Week 2/Logistic Regression and Derivatives.ipynb
+++ b/Coursera/Deeplearning.ai/Neural Networks and Deep Learning/Week 2/Logistic Regression and Derivatives.ipynb
@@ -23,34 +23,25 @@
     "\n",
     "### Forward: \n",
     "\n",
-    "$\n",
-    "  x_1, w_1, x_2, w_2, b \\\\\n",
-    "  z = w_1x_1 + w_2x_2 + b \\\\\n",
-    "  a = \\sigma(z) \\\\\n",
-    "  \\mathcal{L}(a,y)\n",
-    "$\n",
+    "$x_1, w_1, x_2, w_2, b$<br>\n",
+    "$z = w_1x_1 + w_2x_2 + b$<br>\n",
+    "$a = \\sigma(z)$<br>\n",
+    "$\\mathcal{L}(a,y)$\n",
     "\n",
     "### Backward:\n",
     "\n",
-    "$\n",
-    "  da = \\frac{d\\mathcal{L}(a,y)}{da} = -\\frac{y}{a} + \\frac{1 - y}{1 - a} \\\\\n",
-    "  dz = \\frac{d\\mathcal{L}}{dz} = \\frac{d\\mathcal{L}(a,y)}{dz} \\rightarrow\\ \\ \\\n",
-    "  dz = \\frac{d\\mathcal{L}}{da} . \\frac{da}{dz} \\rightarrow\\ \\ \\ \n",
-    "  dz = \\left ( - \\frac{y}{a} + \\frac{1 - y}{1 - a} \\right ) . a (1 - a)  \\rightarrow\\ \\ \\ \n",
-    "  dz = a - y \\\\\n",
-    "  \\\\\n",
-    "  dw_1 = \\frac{d\\mathcal{L}}{dw_1} = x_1dz \\\\\n",
-    "  dw_2 = \\frac{d\\mathcal{L}}{dw_2} = x_2dz \\\\\n",
-    "  db = dz\n",
-    "$\n",
+    "$da = \\frac{d\\mathcal{L}(a,y)}{da} = -\\frac{y}{a} + \\frac{1 - y}{1 - a}$<br>\n",
+    "$dz = \\frac{d\\mathcal{L}}{dz} = \\frac{d\\mathcal{L}(a,y)}{dz} \\rightarrow\\ \\ \\ dz = \\frac{d\\mathcal{L}}{da} . \\frac{da}{dz} \\rightarrow\\ \\ \\ dz = \\left ( - \\frac{y}{a} + \\frac{1 - y}{1 - a} \\right ) . a (1 - a)  \\rightarrow\\ \\ \\ dz = a - y$<br>\n",
+    "<br>\n",
+    "$dw_1 = \\frac{d\\mathcal{L}}{dw_1} = x_1dz$<br>\n",
+    "$dw_2 = \\frac{d\\mathcal{L}}{dw_2} = x_2dz$<br>\n",
+    "$db = dz$\n",
     "\n",
     "### Updating weights\n",
     "\n",
-    "$\n",
-    "  w_1 := w_1 - \\alpha dw_1 \\\\\n",
-    "  w_2 := w_2 - \\alpha dw_2 \\\\\n",
-    "  b := b - \\alpha db\n",
-    "$"
+    "$w_1 := w_1 - \\alpha dw_1$<br>\n",
+    "$w_2 := w_2 - \\alpha dw_2$<br>\n",
+    "$b := b - \\alpha db$"
    ]
   },
   {
