--- a/Coursera/Deeplearning.ai/Neural Networks and Deep Learning/Week 2/Logistic Regression and Derivatives.ipynb
+++ b/Coursera/Deeplearning.ai/Neural Networks and Deep Learning/Week 2/Logistic Regression and Derivatives.ipynb
@@ -52,7 +52,7 @@
     "\n",
     "### Cost Function\n",
     "\n",
-    "$J(w,b) = \\frac{1}{m} \\sum\\limits_{i=1}^m \\mathcal{L}(a^{(i)}, y)$<br>\n",
+    "$J(w,b) = \\frac{1}{m} \\sum_{i=1}^m \\mathcal{L}(a^{(i)}, y)$<br>\n",
     "$\\hspace{70pt} (x^{(i)}, y^{(i)})$<br>\n",
     "$a^{(i)} = \\hat{y}^{(i)} = \\sigma(z^{(i)}) = \\sigma(w^Tx^{(i)} + b) \\hspace{35pt} dw_1^{(i)}, dw_2^{(i)}, db^{(i)}$\n",
     "\n",
