--- a/Coursera/Deeplearning.ai/Neural Networks and Deep Learning/Week 2/Logistic Regression and Derivatives.ipynb
+++ b/Coursera/Deeplearning.ai/Neural Networks and Deep Learning/Week 2/Logistic Regression and Derivatives.ipynb
@@ -52,11 +52,14 @@
     "\n",
     "### Cost Function\n",
     "\n",
-    "$J(w,b) = \\frac{1}{m} \\sum_{i=1}^m \\mathcal{L}(a^{(i)}, y)$<br>\n",
-    "$\\hspace{70pt} (x^{(i)}, y^{(i)})$<br>\n",
-    "$a^{(i)} = \\hat{y}^{(i)} = \\sigma(z^{(i)}) = \\sigma(w^Tx^{(i)} + b) \\hspace{35pt} dw_1^{(i)}, dw_2^{(i)}, db^{(i)}$\n",
+    "$\\begin{align}\n",
+    "J(w,b) = \\frac{1}{m} \\sum_{i=1}^m \\mathcal{L}(a^{(i)}, y) \\hspace{35pt} & \\hspace{35pt} (x^{(i)}, y^{(i)}) \\\\\n",
+    "a^{(i)} = \\hat{y}^{(i)} = \\sigma(z^{(i)}) = \\sigma(w^Tx^{(i)} + b) & \\hspace{35pt} dw_1^{(i)}, dw_2^{(i)}, db^{(i)}\n",
+    "\\end{align}$\n",
     "\n",
-    "$\\frac{d}{dw_1}J(w,b) =  \\frac{1}{m} \\sum\\limits_{i=1}^m \\frac{d}{dw_1}\\mathcal{L}(a^{(i)}, y^{(i)}) \\hspace{35pt} \\rightarrow \\hspace{35pt} \\frac{d}{dw_1}J(w,b) = \\frac{1}{m} \\sum\\limits_{i=1}^m \\frac{d}{dw_1^{(i)}}$"
+    "$\n",
+    "\\frac{d}{dw_1}J(w,b) =  \\frac{1}{m} \\sum_{i=1}^m \\frac{d}{dw_1}\\mathcal{L}(a^{(i)}, y^{(i)}) \\hspace{35pt} \\rightarrow \\hspace{35pt} \\frac{d}{dw_1}J(w,b) = \\frac{1}{m} \\sum_{i=1}^m \\frac{d}{dw_1^{(i)}}\n",
+    "$"
    ]
   },
   {
