--- a/Coursera/Deeplearning.ai/Neural Networks and Deep Learning/Week 2/Logistic Regression and Derivatives.ipynb
+++ b/Coursera/Deeplearning.ai/Neural Networks and Deep Learning/Week 2/Logistic Regression and Derivatives.ipynb
@@ -71,32 +71,23 @@
     "$\\text{For}\\ \\ i=1\\ \\ \\text{to}\\ \\ m$<br>\n",
     "$\\hspace{15pt}z^{(i)} = w^Tx^{(i)} + b$<br>\n",
     "$\\hspace{15pt}a^{(i)} = \\sigma(z^{(i)})$<br>\n",
-    "$\\hspace{15pt}J\\ += - [y^{(i)}\\ log(a^{(i)}) + (1 - y^{(i)})\\ log(1 - a^{(i)})]$<br>\n",
+    "$\\hspace{15pt}J\\ \\text{+=}\\ - [y^{(i)}\\ log(a^{(i)}) + (1 - y^{(i)})\\ log(1 - a^{(i)})]$<br>\n",
     "$\\hspace{15pt}dz^{(i)} = a^{(i)} - y^{(i)}$<br>\n",
-    "$\\hspace{15pt}dw_1 += x_1^{(i)}dz^{(i)}$<br>\n",
-    "$\\hspace{15pt}dw_2 += x_2^{(i)}dz^{(i)}$<br>\n",
-    "$\\hspace{15pt}db += dz^{(i)}$<br>\n",
-    "$\\hspace{15pt}J\\ /=\\ m$<br>\n",
-    "$\\hspace{15pt}dw_1\\ /=\\ m$<br>\n",
-    "$\\hspace{15pt}dw_2\\ /=\\ m$<br>\n",
-    "$\\hspace{15pt}db\\ /=\\ m$<br>\n",
+    "$\\hspace{15pt}dw_1\\ \\text{+=}\\ x_1^{(i)}dz^{(i)}$<br>\n",
+    "$\\hspace{15pt}dw_2\\ \\text{+=}\\ x_2^{(i)}dz^{(i)}$<br>\n",
+    "$\\hspace{15pt}db\\ \\text{+=}\\ dz^{(i)}$<br>\n",
+    "$\\hspace{15pt}J\\ \\text{/=}\\ m$<br>\n",
+    "$\\hspace{15pt}dw_1\\ \\text{/=}\\ m$<br>\n",
+    "$\\hspace{15pt}dw_2\\ \\text{/=}\\ m$<br>\n",
+    "$\\hspace{15pt}db\\ \\text{/=}\\ m$<br>\n",
     "$\\text{Fim for}$\n",
     "\n",
     "### Updating weights\n",
     "\n",
-    "$w_1\\ := w_1 - \\alpha dw_1$<br>\n",
-    "$w_2\\ := w_2 - \\alpha dw_2$<br>\n",
-    "$b\\ := b - \\alpha db$"
+    "$w_1\\ \\text{:=}\\ w_1 - \\alpha dw_1$<br>\n",
+    "$w_2\\ \\text{:=}\\ w_2 - \\alpha dw_2$<br>\n",
+    "$b\\ \\text{:=}\\ b - \\alpha db$"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
