--- a/Coursera/Deeplearning.ai/Neural Networks and Deep Learning/Week 3/Neural Networks - Vectorizing through all examples.ipynb
+++ b/Coursera/Deeplearning.ai/Neural Networks and Deep Learning/Week 3/Neural Networks - Vectorizing through all examples.ipynb
@@ -769,7 +769,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Gradient descent for Neural Networks\n",
+    "# Gradient Descent for Neural Networks\n",
     "\n",
     "Remember that for the example below, we have the following configuration:\n",
     "\n",
