--- a/Coursera/University of Alberta/Problem Solving, Python Programming, and Video Games/Week 2/Module 1.ipynb
+++ b/Coursera/University of Alberta/Problem Solving, Python Programming, and Video Games/Week 2/Module 1.ipynb
@@ -17,7 +17,7 @@
     "\n",
     "Below, there is a game creation process diagram, where each sub-task is a part of the computational problem. The first sub-task is **understand game**, where you need to understand what game you are trying to make, *i.e.*, knowing what happens, where it happens, when it happens, and why it happens. \n",
     "\n",
-    "<img src=\"images/create_game_1.svg\" width=\"80%\"/>\n",
+    "<img src=\"https://cdn.rawgit.com/rogergranada/MOOCs/master/Coursera/University%20of%20Alberta/Problem%20Solving%2C%20Python%20Programming%2C%20and%20Video%20Games/Week%202/images/create_game_1.svg\" width=\"80%\"/>\n",
     "\n",
     "Understand game can be divided into two sub-tasks: *observe game* and *play game*. *Observe game* provides a broad but superficial knowledge of the problem, letting you to create an initial impression about that problem. *Play game* allows a deeper personal understanding of a problem by engaging with it. After playing the game, it is important to describe it to another person. Explaining the problem to others allows you to gain a deeper understanding of the problem in many different contexts."
    ]
